--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div class="content-radius">
                     <h3> I'm Fauzi Nur <span> Fadillah </span> </h3>
-                    <p> Hello! Saya adalah fullstack developer masa depan. Untuk sekarang kesibukan saya adalah mengikuti course Fullstack Developer di Hacktiv8.
+                    <p> Hello! Saya adalah fullstack developer masa depan. Untuk sekarang kesibukan saya adalah mengikuti course Fullstack Developer di Hacktiv8. Tidak ada kesan bila anda tidak meninggalkan pesan. Tekan <a href="#" class="formspree">ini</a>                        untuk meninggalkan pesan.
                     </p>
                     <div class="biografi">
                         <div>
@@ -161,12 +161,12 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
-
-
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <script src="formspree.js">
+    </script>
 
 </body>
 
