--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <div id="logo" class="banner-column">
             <h1>COWBOY</h1>
         </div>
-        <div class="banner-column">
-
-        </div>
     </header>
     
     <div class="container">
@@ -35,21 +32,21 @@
                 <div class="source">
                     -wikipedia
                 </div>
-            </div>
+            </article>
         </div>
     
     </div>
 
     <div class="container">
         <div class="wrapper row">            
-            <div class="paragraph col">
+            <article class="paragraph col">
                 <h2>History</h2>
                 <p class="description">The origins of the cowboy tradition come from Spain, beginning with the hacienda system of medieval Spain. This style of cattle ranching spread throughout much of the Iberian peninsula, and later was imported to the Americas. Both regions possessed a dry climate with sparse grass, thus large herds of cattle required vast amounts of land to obtain sufficient forage. The need to cover distances greater than a person on foot could manage gave rise to the development of the horseback-mounted <span class="explain" title="horse-mounted livestock herder">vaquero</span>.</p>
                 <br>
                 <div class="source">
                     -wikipedia
                 </div>
-            </div>
+            </article>
             <div class="image col">
                 <img src="img/cowboys.jpg" alt="Cowboy" />
             </div>
